--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width"/>
-    <link rel="stylesheet" href="assets/css/_style.css"/>
+    <link rel="stylesheet" href="assets/css/style.css"/>
     <!--link(rel="icon", type="image/png", href="favicon.png")-->
     
     
