--- a/baja.html
+++ b/baja.html
@@ -52,7 +52,7 @@
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label inputDeployer">
             <input type="text" id="sitio" name="sitio" class="mdl-textfield__input"/>
             <label for="sitio" class="mdl-textfield__label"><span>Sitio</span> </label>
-            <button type="button" onClick="openMenuSitios('sitio')" class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
+            <button type="button" onClick="openMenuSitios('sitio', 'db_sitios.html')" class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
               <ons-icon icon="ion-android-list"></ons-icon>
             </button>
           </div>
