--- a/relacion.html
+++ b/relacion.html
@@ -53,7 +53,7 @@
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label inputDeployer">
               <input type="text" id="sitioDestion" name="sitioDestion" class="mdl-textfield__input"/>
               <label for="sitioDestion" class="mdl-textfield__label"><span>Sitio destino</span> </label>
-              <button type="button" onClick="openMenuSitios('sitioDestion')" class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
+              <button type="button" onClick="openMenuSitios('sitioDestion', 'db_sitios.html')" class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
                 <ons-icon icon="ion-android-list"></ons-icon>
               </button>
             </div>
@@ -62,7 +62,7 @@
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label inputDeployer">
               <input type="text" id="sitioOrigen" name="sitioOrigen" class="mdl-textfield__input"/>
               <label for="sitioOrigen" class="mdl-textfield__label"><span>Sitio orígen</span> </label>
-              <button type="button" onClick="openMenuSitios('sitioOrigen')" class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
+              <button type="button" onClick="openMenuSitios('sitioOrigen', 'db_sitios.html')" class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
                 <ons-icon icon="ion-android-list"></ons-icon>
               </button>
             </div>
