--- a/requerimientos.html
+++ b/requerimientos.html
@@ -68,7 +68,7 @@
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label inputDeployer">
               <input type="text" id="sitio" name="sitio" class="mdl-textfield__input"/>
               <label for="sitio" class="mdl-textfield__label"><span>Sitio</span> </label>
-              <button type="button" onClick="openMenuSitios('sitio')" class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
+              <button type="button" onClick="openMenuSitios('sitio', 'lateral_db_sitios.html')" class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
                 <ons-icon icon="ion-android-list"></ons-icon>
               </button>
             </div>
@@ -143,7 +143,7 @@
               <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label inputDeployer">
                 <input type="text" id="clave" name="clave" class="mdl-textfield__input"/>
                 <label for="clave" class="mdl-textfield__label"><span>Clave</span> </label>
-                <button type="button" onClick="openMenuSitios('clave')" class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
+                <button type="button" onClick="openMenuSitios('clave', 'lateral_db_catalogos.html')" class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
                   <ons-icon icon="ion-android-list"></ons-icon>
                 </button>
               </div>
