--- a/catalogo.html
+++ b/catalogo.html
@@ -1,6 +1,6 @@
 
 <!--META TAGS-->
-<!-- Sitio-->
+<!-- Sitio -->
 <ons-page class="catalogo">
   <ons-toolbar>
     <div class="left">
@@ -10,7 +10,7 @@
     </div>
     <div class="center">Catálogo</div>
     <div class="right">
-      <ons-toolbar-button ng-click="menuRight.toggleMenu()">
+      <ons-toolbar-button ng-click="menuRight.setMenuPage('menuRight.html'); menuRight.toggleMenu()">
         <ons-icon icon="ion-gear-a"></ons-icon>
       </ons-toolbar-button>
     </div>
