--- a/main.html
+++ b/main.html
@@ -1,6 +1,6 @@
 
 <!--META TAGS-->
-<!-- Sitio--><!DOCTYPE html>
+<!-- Sitio --><!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="utf-8" lang="es"/>
@@ -17,6 +17,7 @@
     
   </head>
   <body>
+    <div class="dbase"></div>
     <ons-sliding-menu main-page="fullContainer.html" menu-page="menuRight.html" side="right" max-slide-distance="450px" var="menuRight" swipe-target-width="200px" swipeable="false"></ons-sliding-menu>
     <ons-template id="fullContainer.html">
       <ons-page>
@@ -58,6 +59,9 @@
         </ons-list-item>
         <ons-list-item modifier="chevron" onclick="menu.setMainPage('catalogo.html', {closeMenu:true});  upgrade();" class="catalogo">
           <ons-icon icon="ion-images"></ons-icon> Catálogo
+        </ons-list-item>
+        <ons-list-item modifier="chevron" onclick="menu.setMainPage('datos.html', {closeMenu:true});  upgrade();" class="datos">
+          <ons-icon icon="ion-clipboard"></ons-icon> Datos
         </ons-list-item>
       </ons-list>
     </ons-template>
@@ -103,9 +107,12 @@
     <script src="assets/js/jslib/jquery.js"></script>
     <script src="assets/js/jslib/onsenui.js"></script>
     <script src="assets/js/jslib/material.js"></script>
+    <script src="assets/js/jslib/properDB.js"></script>
+    <script src="assets/js/jslib/taffy.js"></script>
+    <script src="assets/js/jslib/ng-cordova.min.js"></script>
+    <script src="assets/js/../../cordova.js"></script>
     <script src="assets/js/script.js"></script>
-    <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="assets/js/index.js"></script>
-    <script src="http://localhost:8080/target/target-script-min.js#anonymous"></script>
+    <script src="assets/js/dbhandler.js"></script>
+    <script src="assets/js/index.js"></script>
   </body>
 </html>
