--- a/proveedor.html
+++ b/proveedor.html
@@ -1,6 +1,6 @@
 
 <!--META TAGS-->
-<!-- Sitio-->
+<!-- Sitio -->
 <ons-page class="proveedor">
   <ons-toolbar>
     <div class="left">
@@ -10,17 +10,17 @@
     </div>
     <div class="center">Proveedor</div>
     <div class="right">
-      <ons-toolbar-button ng-click="menuRight.toggleMenu()">
+      <ons-toolbar-button ng-click="menuRight.setMenuPage('menuRight.html'); menuRight.toggleMenu()">
         <ons-icon icon="ion-gear-a"></ons-icon>
       </ons-toolbar-button>
     </div>
   </ons-toolbar>
-  <ons-bottom-toolbar modifier="transparent" class="text-right pageAction">
-    <button type="button" onclick="alert('Enviar requerimiento');" class="mdl-button mdl-js-button">
-      <ons-icon icon="ion-ios-paperplane"></ons-icon> Guardar proveedor
-    </button>
-  </ons-bottom-toolbar>
-  <form action="#">
+  <form action="#" ng-controller="ProveedorCtrl">
+    <ons-bottom-toolbar modifier="transparent" class="text-right pageAction">
+      <button type="button" ng-click="save()" class="mdl-button mdl-js-button">
+        <ons-icon icon="ion-ios-paperplane"></ons-icon> Guardar
+      </button>
+    </ons-bottom-toolbar>
     <ons-row>
       <div class="titulo">
         <ons-icon icon="ion-ios-arrow-right"></ons-icon> Información
@@ -30,13 +30,13 @@
       <ons-row>
         <ons-col>
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input type="text" id="remision" name="remision" class="mdl-textfield__input"/>
-            <label for="remision" class="mdl-textfield__label">No. SCOPE</label>
+            <input type="text" id="remision" name="remision" ng-model="campos.remision" class="mdl-textfield__input"/>
+            <label for="remision" class="mdl-textfield__label">No.  de requerimiento SCOPE</label>
           </div>
         </ons-col>
         <ons-col>
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input type="date" id="fecha" name="fecha" class="mdl-textfield__input"/>
+            <input type="date" id="fecha" name="fecha" ng-model="campos.fecha" class="mdl-textfield__input"/>
             <label for="fecha" class="mdl-textfield__label">Fecha</label>
           </div>
         </ons-col>
@@ -45,25 +45,25 @@
       <ons-row>
         <ons-col>
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input type="text" id="nombreProveedor" name="nombreProveedor" class="mdl-textfield__input"/>
+            <input type="text" id="nombreProveedor" name="nombreProveedor" ng-model="campos.nombreProveedor" class="mdl-textfield__input"/>
             <label for="nombreProveedor" class="mdl-textfield__label">Nombre del proveedor</label>
           </div>
         </ons-col>
         <ons-col>
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input type="text" id="claveProveedor" name="claveProveedor" class="mdl-textfield__input"/>
+            <input type="text" id="claveProveedor" name="claveProveedor" ng-model="campos.claveProveedor" class="mdl-textfield__input"/>
             <label for="claveProveedor" class="mdl-textfield__label">Clave del proveedor</label>
           </div>
         </ons-col>
         <ons-col>
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input type="text" id="contacto" name="contacto" class="mdl-textfield__input"/>
+            <input type="text" id="contacto" name="contacto" ng-model="campos.contacto" class="mdl-textfield__input"/>
             <label for="contacto" class="mdl-textfield__label">Contacto</label>
           </div>
         </ons-col>
         <ons-col>
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input type="text" id="telefono" name="telefono" class="mdl-textfield__input"/>
+            <input type="text" id="telefono" name="telefono" ng-model="campos.telefono" class="mdl-textfield__input"/>
             <label for="telefono" class="mdl-textfield__label">Teléfono</label>
           </div>
         </ons-col>
@@ -71,7 +71,7 @@
       <ons-row>
         <ons-col>
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input type="text" id="comentariosProveedor" name="comentariosProveedor" class="mdl-textfield__input"/>
+            <input type="text" id="comentariosProveedor" name="comentariosProveedor" ng-model="campos.comentariosProveedor" class="mdl-textfield__input"/>
             <label for="comentariosProveedor" class="mdl-textfield__label">Comentarios</label>
           </div>
         </ons-col>
@@ -86,25 +86,25 @@
       <ons-row>
         <ons-col>
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input type="text" id="nombreEquipo" name="nombreEquipo" class="mdl-textfield__input"/>
+            <input type="text" id="nombreEquipo" name="nombreEquipo" ng-model="campos.nombreEquipo" class="mdl-textfield__input"/>
             <label for="nombreEquipo" class="mdl-textfield__label">Nombre del equipo</label>
           </div>
         </ons-col>
         <ons-col>
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input type="text" id="claveEquipo" name="claveEquipo" class="mdl-textfield__input"/>
+            <input type="text" id="claveEquipo" name="claveEquipo" ng-model="campos.claveEquipo" class="mdl-textfield__input"/>
             <label for="claveEquipo" class="mdl-textfield__label">Clave del equipo</label>
           </div>
         </ons-col>
         <ons-col>
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input type="text" id="familioEquipo" name="familioEquipo" class="mdl-textfield__input"/>
-            <label for="familioEquipo" class="mdl-textfield__label">Familia del equipo</label>
+            <input type="text" id="familiaEquipo" name="familiaEquipo" ng-model="campos.familiaEquipo" class="mdl-textfield__input"/>
+            <label for="familiaEquipo" class="mdl-textfield__label">Familia del equipo</label>
           </div>
         </ons-col>
         <ons-col>
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input type="text" id="proveedor" name="proveedor" class="mdl-textfield__input"/>
+            <input type="text" id="proveedor" name="proveedor" ng-model="campos.proveedor" class="mdl-textfield__input"/>
             <label for="proveedor" class="mdl-textfield__label">Proveedor</label>
           </div>
         </ons-col>
@@ -112,7 +112,7 @@
       <ons-row>
         <ons-col>
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input type="text" id="comentariosEquipo" name="comentariosEquipo" class="mdl-textfield__input"/>
+            <input type="text" id="comentariosEquipo" name="comentariosEquipo" ng-model="campos.comentariosEquipo" class="mdl-textfield__input"/>
             <label for="comentariosEquipo" class="mdl-textfield__label">Comentarios</label>
           </div>
         </ons-col>
@@ -129,13 +129,13 @@
     <div class="m10">
       <ons-row>
         <ons-col class="text-center">
-          <button type="button" ng-click="alert('Tomar foto');" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+          <button type="button" ng-click="camera()" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
             <ons-icon icon="ion-camera"></ons-icon>
           </button>
         </ons-col>
       </ons-row>
       <ons-row>
-        <ons-col class="text-center"><img src="http://placehold.it/400x400" alt=""/></ons-col>
+        <ons-col class="text-center"><img ng-src="" alt="" id="picture"/></ons-col>
       </ons-row>
     </div>
   </form>
