--- a/transformacion.html
+++ b/transformacion.html
@@ -1,6 +1,6 @@
 
 <!--META TAGS-->
-<!-- Sitio-->
+<!-- Sitio -->
 <ons-navigator title="Elegir opción" var="autocomplete">
   <ons-page class="transformacion">
     <ons-toolbar>
@@ -11,17 +11,17 @@
       </div>
       <div class="center">Transformación</div>
       <div class="right">
-        <ons-toolbar-button ng-click="menuRight.toggleMenu()">
+        <ons-toolbar-button ng-click="menuRight.setMenuPage('menuRight.html'); menuRight.toggleMenu()">
           <ons-icon icon="ion-gear-a"></ons-icon>
         </ons-toolbar-button>
       </div>
     </ons-toolbar>
-    <ons-bottom-toolbar modifier="transparent" class="text-right pageAction">
-      <button type="button" onclick="alert('Realizar transformación');" class="mdl-button mdl-js-button">
-        <ons-icon icon="ion-ios-paperplane"></ons-icon> Guardar
-      </button>
-    </ons-bottom-toolbar>
-    <form action="#">
+    <form action="#" ng-controller="TransformacionCtrl">
+      <ons-bottom-toolbar modifier="transparent" class="text-right pageAction">
+        <button type="button" ng-click="save()" class="mdl-button mdl-js-button">
+          <ons-icon icon="ion-ios-paperplane"></ons-icon> Guardar      
+        </button>
+      </ons-bottom-toolbar>
       <ons-row>
         <div class="titulo">
           <ons-icon icon="ion-ios-arrow-right"></ons-icon> Información
@@ -31,29 +31,25 @@
         <ons-row>
           <ons-col>
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-              <input type="text" id="folioSitio" name="folioSitio" class="mdl-textfield__input"/>
+              <input type="text" id="folioSitio" name="folioSitio" ng-model="campos.folioSitio" class="mdl-textfield__input"/>
               <label for="folioSitio" class="mdl-textfield__label">Folio sitio</label>
             </div>
           </ons-col>
+          <!--ons-col: +input('folioScope', 'Folio SCOPE')-->
           <ons-col>
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-              <input type="text" id="folioScope" name="folioScope" class="mdl-textfield__input"/>
-              <label for="folioScope" class="mdl-textfield__label">Folio SCOPE</label>
-            </div>
-          </ons-col>
-          <ons-col>
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-              <input type="date" id="fecha" name="fecha" class="mdl-textfield__input"/>
+              <input type="date" id="fecha" name="fecha" ng-model="campos.fecha" class="mdl-textfield__input"/>
               <label for="fecha" class="mdl-textfield__label">Fecha</label>
             </div>
           </ons-col>
+          <ons-col></ons-col>
         </ons-row>
         <ons-row>
           <ons-col>
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label inputDeployer">
-              <input type="text" id="sitio" name="sitio" class="mdl-textfield__input"/>
+              <input type="text" id="sitio" name="sitio" ng-model="campos.sitio" class="mdl-textfield__input"/>
               <label for="sitio" class="mdl-textfield__label"><span>Sitio</span> </label>
-              <button type="button" onClick="openMenuSitios('sitio', 'db_sitios.html')" class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
+              <button type="button" onClick="openMenuSitios('sitio', 'lateral_db_sitios.html')" class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
                 <ons-icon icon="ion-android-list"></ons-icon>
               </button>
             </div>
@@ -82,7 +78,7 @@
                 <th>Clave</th>
                 <th>Cantidad</th>
                 <th>Clave</th>
-                <th>Descripción</th>
+                <th>Comentario</th>
                 <th ng-controller="AddItemDialogController" class="addButton">
                   <button type="button" ng-click="show('addItem.html')" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
                     <ons-icon icon="ion-plus-round"></ons-icon>
@@ -90,14 +86,24 @@
                 </th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>1023</td>
-                <td>1</td>
-                <td>19385</td>
-                <td> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis incidunt vel consequuntur.</td>
-                <td><a href="#">
+            <tbody ng-controller="TableCtrl">
+              <tr ng-repeat="item in items track by $index">
+                <td>
+                  <input ng-model="campos.elemento[$index].cantidad" ng-init="campos.elemento[$index].cantidad=item.cantidad" class="mdl-textfield__input"/>
+                </td>
+                <td>
+                  <input ng-model="campos.elemento[$index].clave" ng-init="campos.elemento[$index].clave=item.clave" class="mdl-textfield__input"/>
+                </td>
+                <td>
+                  <input ng-model="campos.elemento[$index].cantidadTransformado" ng-init="campos.elemento[$index].cantidadTransformado=item.cantidadTransformado" class="mdl-textfield__input"/>
+                </td>
+                <td>
+                  <input ng-model="campos.elemento[$index].claveTransformado" ng-init="campos.elemento[$index].claveTransformado=item.claveTransformado" class="mdl-textfield__input"/>
+                </td>
+                <td>
+                  <input ng-model="campos.elemento[$index].comentarioTransformado" ng-init="campos.elemento[$index].comentarioTransformado=item.comentarioTransformado" class="mdl-textfield__input"/>
+                </td>
+                <td><a href="#" ng-click="removeItem($index)">
                     <ons-icon icon="ion-close-round"></ons-icon></a></td>
               </tr>
             </tbody>
@@ -105,59 +111,70 @@
         </ons-row>
       </div>
     </form>
+    <ons-template id="addItem.html">
+      <ons-dialog var="addItemDialog" cancelable="cancelable" class="transformacion">
+        <ons-toolbar inline="inline">
+          <div class="center">Añadir nuevo</div>
+        </ons-toolbar>
+        <form action="#" ng-controller="DialogCtrl" ng-submit="submit()" class="m10 transformacion">
+          <p>Producto origen</p>
+          <ons-row>
+            <ons-col>
+              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <input type="text" id="cantidad" name="cantidad" ng-model="campos.cantidad" class="mdl-textfield__input"/>
+                <label for="cantidad" class="mdl-textfield__label">Cantidad</label>
+              </div>
+            </ons-col>
+            <ons-col>
+              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label inputDeployer">
+                <input type="text" id="clave" name="clave" ng-model="campos.clave" class="mdl-textfield__input"/>
+                <label for="clave" class="mdl-textfield__label"><span>Clave</span> </label>
+                <button type="button" onClick="openMenuSitios('clave', 'lateral_db_catalogos.html')" class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
+                  <ons-icon icon="ion-android-list"></ons-icon>
+                </button>
+              </div>
+            </ons-col>
+          </ons-row>
+          <p>Producto transformado</p>
+          <ons-row>
+            <ons-col>
+              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <input type="text" id="cantidadTransformado" name="cantidadTransformado" ng-model="campos.cantidadTransformado" class="mdl-textfield__input"/>
+                <label for="cantidadTransformado" class="mdl-textfield__label">Cantidad</label>
+              </div>
+            </ons-col>
+            <ons-col>
+              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label inputDeployer">
+                <input type="text" id="claveTransformado" name="claveTransformado" ng-model="campos.claveTransformado" class="mdl-textfield__input"/>
+                <label for="claveTransformado" class="mdl-textfield__label"><span>Clave</span> </label>
+                <button type="button" onClick="openMenuSitios('claveTransformado', 'lateral_db_catalogos.html')" class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
+                  <ons-icon icon="ion-android-list"></ons-icon>
+                </button>
+              </div>
+            </ons-col>
+          </ons-row>
+          <ons-row>
+            <ons-col>
+              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <input type="text" id="comentarioTransformado" name="comentarioTransformado" ng-model="campos.comentarioTransformado" class="mdl-textfield__input"/>
+                <label for="comentarioTransformado" class="mdl-textfield__label">Comentario</label>
+              </div>
+            </ons-col>
+          </ons-row>
+          <ons-row>
+            <ons-col class="text-center">
+              <button type="button" ng-click="addItemDialog.hide()" class="mdl-button mdl-js-button mdl-button--colored">
+                <ons-icon icon="ion-close"></ons-icon> Cancelar
+              </button>
+            </ons-col>
+            <ons-col class="text-center">
+              <button type="submit" ng-click="addItemDialog.hide()" class="mdl-button mdl-js-button mdl-button--colored">
+                <ons-icon icon="ion-plus-round"></ons-icon> Añadir elemento
+              </button>
+            </ons-col>
+          </ons-row>
+        </form>
+      </ons-dialog>
+    </ons-template>
   </ons-page>
 </ons-navigator>
-<ons-template id="addItem.html">
-  <ons-dialog var="addItemDialog" cancelable="cancelable">
-    <ons-toolbar inline="inline">
-      <div class="center">Añadir nuevo</div>
-    </ons-toolbar>
-    <div class="m10 transformacion">
-      <p>Producto origen</p>
-      <ons-row>
-        <ons-col>
-          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input type="text" id="cantidad" name="cantidad" class="mdl-textfield__input"/>
-            <label for="cantidad" class="mdl-textfield__label">Cantidad</label>
-          </div>
-        </ons-col>
-        <ons-col>
-          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input type="text" id="clave" name="clave" class="mdl-textfield__input"/>
-            <label for="clave" class="mdl-textfield__label">Clave</label>
-          </div>
-        </ons-col>
-      </ons-row>
-      <p>Producto transformado</p>
-      <ons-row>
-        <ons-col>
-          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input type="text" id="cantidadTransformado" name="cantidadTransformado" class="mdl-textfield__input"/>
-            <label for="cantidadTransformado" class="mdl-textfield__label">Cantidad</label>
-          </div>
-        </ons-col>
-        <ons-col>
-          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input type="text" id="claveTransformado" name="claveTransformado" class="mdl-textfield__input"/>
-            <label for="claveTransformado" class="mdl-textfield__label">Clave</label>
-          </div>
-        </ons-col>
-      </ons-row>
-      <ons-row>
-        <ons-col>
-          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input type="text" id="comentarioTransformado" name="comentarioTransformado" class="mdl-textfield__input"/>
-            <label for="comentarioTransformado" class="mdl-textfield__label">Comentario</label>
-          </div>
-        </ons-col>
-      </ons-row>
-      <ons-row>
-        <ons-col class="text-center">
-          <button type="button" ng-click="addItemDialog.hide()" class="mdl-button mdl-js-button mdl-button--colored">
-            <ons-icon icon="ion-plus-round"></ons-icon> Añadir elemento
-          </button>
-        </ons-col>
-      </ons-row>
-    </div>
-  </ons-dialog>
-</ons-template>
